[package]
name = "asana"
version = "1.0.0"
authors = ["wildskyf <poppin.wildsky+gh@gmail.com>"]

[dependencies]
curl = "0.4.6"
serde_json = "0.6.0"

[dependencies.clap]
version = "2.29"
default-features = false

# Cherry-pick the features you'd like to use
features = [ "yaml", "color", "suggestions" ]
